@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/icu
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.209 2012/10/25 18:53:59 floppym Exp $
+
+*icu-51.1 (09 Apr 2013)
+
+  09 Apr 2013; Fabian Groffen <grobian@gentoo.org> +icu-51.1.ebuild,
+  metadata.xml:
+  sync
 
   30 Oct 2012; Fabian Groffen <grobian@gentoo.org> icu-49.1.2.ebuild:
   Marked ~x64-freebsd
